--- a/thesis/tex/glossary.tex
+++ b/thesis/tex/glossary.tex
@@ -102,7 +102,7 @@
 }
 \newglossaryentry{temporal resolution}{
 	name = temporal resolution,
-	description = {--}
+	description = {-- the shortest time period of neural activity that is reliably separated out by a measuring technique}
 }
 \newglossaryentry{visual processing centre}{
 	name = visual processing centre,
@@ -185,7 +185,7 @@
 	description = {--}
 }
 \newglossaryentry{pattern reversal}{
-	name = single graphic,
+	name = pattern reversal,
 	description = {--}
 }
 \newglossaryentry{pure tone}{
